syntax = "proto3";
package iot.polling;
import "types.proto";

service RequestUpdateService {
    rpc PollForUpdate(PollRequest) returns (PollResponse);
};

message PollRequest {
    string certificate = 1;
    string uuid = 2;
    repeated iot.types.DeviceCapabilityStatus updatedCapabilities = 3;
    string signature = 4;
};

message PollResponse {
    PollingOption hasUpdate = 1;
    repeated Update updates = 2;
    string signature = 4;
};

enum PollingOption {
    UNKNOWN = 0;
    NONE = 1;
    SOME = 2;
    DEVICE_NOT_FOUND = 3;
}

message Update {
    string capability = 1;
    bool hasValue = 2;
    int32 value = 3;
}
