syntax = "proto3";
package iot.types;

message DeviceCapabilityStatus {
    bool available = 1;
    string capability = 2;
}
